fix overlapping charts

--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,10 @@ div.col-md-2, div.col-md-6 {
   height: 300px !important;
 }
 
+#apexchart5a, #apexchart5b {
+  height: 150px !important;
+}
+
 #spark1, #spark2, #spark3, #spark4, #spark5, #spark6, .explainer {
   position: relative;
   padding-right: 15px;
@@ -110,8 +114,6 @@ div.col-md-2, div.col-md-6 {
 
 /* overrides */
 .sparkboxes #apexcharts-subtitle-text { fill: #8799a2 !important; }
-.apexcharts-legend-text { }
-.apexcharts-legend-marker {display: none;}
 
 /* The switch - the box around the slider */
 .switch {
